@@ -339,7 +339,7 @@ namespace libtorrent
 		else
 		{
 			set_state(torrent_status::downloading_metadata);
-			if (!m_trackers.empty()) start_announcing();
+			start_announcing();
 		}
 	}
 
@@ -2884,8 +2884,7 @@ namespace libtorrent
 		if (m_settings.prefer_udp_trackers)
 			prioritize_udp_trackers();
 
-		if (!m_trackers.empty()) start_announcing();
-		else stop_announcing();
+		if (!m_trackers.empty()) announce_with_tracker();
 	}
 
 	void torrent::prioritize_udp_trackers()
@@ -2934,7 +2933,7 @@ namespace libtorrent
 		if (k - m_trackers.begin() < m_last_working_tracker) ++m_last_working_tracker;
 		k = m_trackers.insert(k, url);
 		if (k->source == 0) k->source = announce_entry::source_client;
-		if (!m_trackers.empty()) start_announcing();
+		if (!m_trackers.empty()) announce_with_tracker();
 	}
 
 	bool torrent::choke_peer(peer_connection& c)
@@ -5254,6 +5253,8 @@ namespace libtorrent
 #ifndef TORRENT_DISABLE_DHT
 		m_dht_announce_timer.cancel(ec);
 #endif
+		if (m_ses.m_lsd)
+			m_ses.m_lsd_announce_timer.cancel(ec);
 		m_tracker_timer.cancel(ec);
 
 		m_announcing = false;
